@@ -4,6 +4,8 @@
 - Bugfix: The scroll container detection of the hans skin works
   now.
 - Bugfix: Added help text for the arrayCountLimit.
+- Bugfix: "Resolving" of unresolvable inherited comment parts work
+  now as expected.
 
 2.4.0
 - Added the method analysis to the recursion detection, to prevent
